# cmake_templates

./: .gitignore  CMakeLists.txt  LICENSE  README.md
external_toolchain/: CMakeLists.txt  README.md  auxiliary.h  external_toolchain.sh.in  main.cpp  totally_awesome_compiler.py
